04-csharp-subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csharp-subscriber
  namespace: lab01
  labels:
    app: csharp-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csharp-subscriber
  template:
    metadata:
      labels:
        app: csharp-subscriber
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "csharp-subscriber"
        dapr.io/app-port: "5009"
    spec:
      containers:
        - name: csharp-subscriber
          image: ghcr.io/dapr/samples/pubsub-csharp-subscriber:latest
          ports:
            - containerPort: 5009
          imagePullPolicy: Always
